@@ -20,8 +20,8 @@ final class HCTable extends Table {
     private @Getter int gameStae;
     private @Getter int gameIndex = 0;
     private float revenue = 0;
-    private ChipStruct[] chipList;               //桌子下注信息
-    private long[] playerChipList = { 0, 0, 0, 0, 0, 0, 0, 0 };       //每个台上玩家下注量不包含机器人
+    private ChipStruct[] chipList; // 桌子下注信息
+    private long[] playerChipList = { 0, 0, 0, 0, 0, 0, 0, 0 }; // 每个台上玩家下注量不包含机器人
     private int[] weightsList = { 3, 24, 4, 24, 6, 24, 12, 24 };
     public final int[] progress = { 40, 5, 30, 5, 20, 5, 10, 5 };
     public List<Integer> history;
@@ -43,7 +43,7 @@ final class HCTable extends Table {
     public int bankerSize;
     public boolean sys;
     public boolean allowBank = false;
-    private HashSet<Role> chipPlayer;       //下过注的玩家
+    private HashSet<Role> chipPlayer; // 下过注的玩家
     private int nOpen;
 
     @Override
@@ -52,9 +52,9 @@ final class HCTable extends Table {
         openTime = Integer.valueOf((String) roomConfig.get("betTime"));
         waitTime = Integer.valueOf((String) roomConfig.get("freeTime"));
         chipTime = Integer.valueOf((String) roomConfig.get("betTime"));
-        bankerSize=0;
-        if(roomConfig.get("goldCount1")!=""){
-            bankerSize=(int) Integer.valueOf((String) roomConfig.get("goldCount1"));
+        bankerSize = 0;
+        if (roomConfig.get("goldCount1") != "") {
+            bankerSize = (int) Integer.valueOf((String) roomConfig.get("goldCount1"));
         }
         roomName = (String) roomConfig.get("roomName");
         if (openTime < 15) {
@@ -71,15 +71,21 @@ final class HCTable extends Table {
         } else {
             revenue = 0;
         }
-        if(roomConfig.get("bankerTime")!=null){
+        if (roomConfig.get("bankerTime") != null) {
             relMaxBank = maxBanker = Integer.valueOf((String) roomConfig.get("bankerTime"));
-        }else{
+        } else {
             relMaxBank = maxBanker = 10;
         }
-        
-        bankMoney = Integer.valueOf((String) roomConfig.get("bankerCond"))*100;
-        extBanker = Integer.valueOf((String) roomConfig.get("addedTime"))*100;
-        extBankerMoney = new Double(Double.valueOf((String) roomConfig.get("addedCond"))).longValue();
+
+        bankMoney = Integer.valueOf((String) roomConfig.get("bankerCond")) * 100;
+        extBanker = 0;
+        if (roomConfig.get("addedTime") != null) {
+            extBanker = Integer.valueOf((String) roomConfig.get("addedTime")) * 100;
+        }
+        extBankerMoney=1999999999;
+        if (roomConfig.get("addedCond") != null) {
+            extBankerMoney = new Double(Double.valueOf((String) roomConfig.get("addedCond"))).longValue();
+        }
 
         minChip = Integer.valueOf((String) roomConfig.get("bottomRed1")) * 100;
         maxChip = Integer.valueOf((String) roomConfig.get("bottomRed2")) * 100;
@@ -95,6 +101,7 @@ final class HCTable extends Table {
         chipPlayer = new HashSet<>();
         history = new ArrayList<>();
     }
+
     /**
      * 玩家进入房间
      */
@@ -111,6 +118,7 @@ final class HCTable extends Table {
         mm.msg = msg;
         broadcast(ownMsg, mm, role.uniqueId);
     };
+
     /**
      * 玩家重连进入房间
      */
@@ -119,6 +127,7 @@ final class HCTable extends Table {
         SuccessResponse ownMsg = new SuccessResponse(2001, "45544454");
         role.send(ownMsg);
     };
+
     /**
      * 玩家退出桌子
      */
@@ -136,10 +145,12 @@ final class HCTable extends Table {
         mm.msg = new HashMap<>(msg);
         broadcast(ownMsg, mm, role.uniqueId);
     };
+
     /**
      * 玩家下注
+     * 
      * @param role
-     * @param map   //客户端发过来的下注消息
+     * @param map  //客户端发过来的下注消息
      * @return
      */
     @SuppressWarnings("unchecked")
@@ -210,6 +221,7 @@ final class HCTable extends Table {
 
     /**
      * 玩家上庄
+     * 
      * @param role
      */
     public void playerUpBanker(Role role) {
@@ -237,6 +249,7 @@ final class HCTable extends Table {
             }
         }
     };
+
     /**
      * 玩家下庄
      */
@@ -267,8 +280,10 @@ final class HCTable extends Table {
             broadcast(ownMsg, otherMsg, role.uniqueId);
         }
     };
+
     /**
      * 玩家亲求桌子
+     * 
      * @param role
      */
     public void requstTableScene(Role role) {
@@ -338,8 +353,10 @@ final class HCTable extends Table {
         response.msg = msg;
         role.send(response);
     };
+
     /**
      * 获取所有下注金额
+     * 
      * @return
      */
     public long getCountMoney() {
@@ -349,8 +366,10 @@ final class HCTable extends Table {
         }
         return money;
     }
+
     /**
      * 检查玩家是不是庄家
+     * 
      * @param role
      * @return
      */
@@ -376,6 +395,7 @@ final class HCTable extends Table {
             }
         }, 1, this);
     };
+
     /**
      * 游戏主循环
      */
@@ -388,6 +408,7 @@ final class HCTable extends Table {
             toNextState();
         }
     };
+
     /**
      * 切换游戏状态
      */
@@ -405,7 +426,7 @@ final class HCTable extends Table {
         case 1:
             runOpenPeriod();
             sendChanegGameState();
-            lottory();        
+            lottory();
             break;
         case 0:
             sendOpenToHall();
@@ -424,7 +445,8 @@ final class HCTable extends Table {
         response.msg = msg;
         room.getHall().broadcast(response);
     };
-    private void sendOpenToHall(){
+
+    private void sendOpenToHall() {
         history.add(nOpen);
         if (history.size() > 10) {
             history.remove(0);
@@ -436,7 +458,6 @@ final class HCTable extends Table {
         hallResponse.msg = hallMsg;
         room.getHall().broadcast(hallResponse);
     }
-
 
     /**
      * 发送游戏状态改变给桌子上的人
@@ -466,6 +487,7 @@ final class HCTable extends Table {
         response.msg = msg;
         broadcast(response);
     };
+
     /**
      * 开奖
      */
@@ -501,9 +523,11 @@ final class HCTable extends Table {
             }
         }
     };
+
     /**
      * 通过权重计算开的奖
-     * @param list  可以开的号码
+     * 
+     * @param list 可以开的号码
      * @return
      */
     private int getOpenNumber(List<Integer> list) {
@@ -522,10 +546,12 @@ final class HCTable extends Table {
         }
         return i;
     }
+
     /**
      * 发送开奖结果
+     * 
      * @param p     开的点数
-     * @param stock   库存变化
+     * @param stock 库存变化
      */
     public void sendLottoryMessage(int p, long stock) {
         int pos = ((int) Math.random() * 4) * 8 + p;
@@ -563,7 +589,7 @@ final class HCTable extends Table {
                 sysTax += playerWin * revenue / 100;
                 playerWin -= playerWin * revenue / 100;
             }
-            player.money += playerWin+((HCRoleInterface)player).getChip();
+            player.money += playerWin + ((HCRoleInterface) player).getChip();
             playerInfo.put("playerCoins", player.money);
             playerInfo.put("selfSettlement", playerWin);
             playerInfo.put("uniqueId", player.uniqueId);
@@ -599,7 +625,7 @@ final class HCTable extends Table {
         // msg.put("playerSettlement", playerTatle);
         response.msg = msg;
         broadcast(response);
-        nOpen=p;
+        nOpen = p;
 
         BenChiGameHistory gameHistory = new BenChiGameHistory();
         gameHistory.wins = wins;
@@ -612,6 +638,7 @@ final class HCTable extends Table {
         result(stock, sysTax, gameHistory);
 
     };
+
     /**
      * 进入等待状态
      */
@@ -630,6 +657,7 @@ final class HCTable extends Table {
         time = waitTime;
         gameStae = 2;
     };
+
     /**
      * 计算庄家
      */
@@ -639,12 +667,12 @@ final class HCTable extends Table {
                 if (banker.money >= extBankerMoney) {
                     relMaxBank += extBanker;
                 }
-            } else {
-                banker = null;
-                bankerIndex = 0;
             }
+            banker = null;
+            bankerIndex = 0;
         }
     }
+
     /**
      * 进入开奖状态
      */
@@ -652,6 +680,7 @@ final class HCTable extends Table {
         time = openTime;
         gameStae = 0;
     };
+
     /**
      * 进入下注状态
      */
